Update and rename 2024-09-29-炉石i.md to 2024-09-29-炉石1.md

--- a/_posts/2024-09-29-炉石1.md
+++ b/_posts/2024-09-29-炉石1.md
@@ -1,17 +1,16 @@
 ---
 layout: post
 title: 炉石周记（1）
-subtitle: There's lots to learn!
 tags: [game,hearthstone,musings]
 comments: true
 mathjax: true
 author: YuHang Wu
 ---
 
-第一篇博客不知道写点什么、用什么语言写，最近炉石国服回归，用术士打了50把天梯左右吧，写写这个。
+第一篇博客不知道写点什么、用什么语言写，最近炉石国服回归，用术士打了50把天梯左右，写写这个吧。
 
 ## 卡组
-自残术的构筑没什么大的变化，小的有两点吧，一个是2费的**小洛欧塞布**没带，那个前期抓到不能快速掉血、后期也不差一回合的法术；还有一个是高费有的带火车王有的带一个6费亡语拿88的随从，我带了**罪孽交响曲**，斩杀可以靠打6或者随从+6/6，还有一个过6张牌，在前期抓不到批量生产的时候挺好用的。
+自残术的构筑没什么大的变化，小的有两点，一个是2费的**小洛欧塞布**没带，那个前期抓到不能快速掉血、后期也不差一回合的法术；还有一个是高费有的带火车王有的带一个6费亡语拿88的随从，我带了**罪孽交响曲**，斩杀可以靠打6或者随从+6/6，还有一个过6张牌，在前期抓不到批量生产的时候挺好用的。
 起手留**派对邪犬、烈焰小鬼、批量生产**
 
 ## 各职业对局思路
